--- a/CronusGL_Assignment/CronusGL_Assignment.vcxproj
+++ b/CronusGL_Assignment/CronusGL_Assignment.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\GLUTCallbacks.cpp" />
     <ClCompile Include="src\LoadTexture2DBMP.cpp" />
@@ -141,6 +142,7 @@
     <ClCompile Include="src\StaticObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\GLUTCallbacks.h" />
     <ClInclude Include="src\LoadTexture2DBMP.h" />
