--- a/CronusGL_Assignment/CronusGL_Assignment.vcxproj
+++ b/CronusGL_Assignment/CronusGL_Assignment.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\DynamicObject.cpp" />
     <ClCompile Include="src\GLUTCallbacks.cpp" />
     <ClCompile Include="src\LoadTexture2DBMP.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -144,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Application.h" />
+    <ClInclude Include="src\DynamicObject.h" />
     <ClInclude Include="src\GLUTCallbacks.h" />
     <ClInclude Include="src\LoadTexture2DBMP.h" />
     <ClInclude Include="src\MeshLoaderOBJ.h" />
