--- a/CronusGL_Assignment/CronusGL_Assignment.vcxproj.filters
+++ b/CronusGL_Assignment/CronusGL_Assignment.vcxproj.filters
@@ -22,6 +22,12 @@
     <Filter Include="Header Files\Objects">
       <UniqueIdentifier>{47a0a90a-1bae-481f-9450-a2347020553a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Scene Graph">
+      <UniqueIdentifier>{8f29ffe9-6019-4710-a9f9-67f640ca7f44}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Scene graph">
+      <UniqueIdentifier>{abfb02e9-b1a8-4049-8c2b-7533b5d2519f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp">
@@ -57,6 +63,9 @@
     <ClCompile Include="src\LinkedList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\SceneNode.cpp">
+      <Filter>Source Files\Scene graph</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
@@ -91,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="src\LinkedList.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SceneNode.h">
+      <Filter>Header Files\Scene Graph</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
