--- a/CronusGL_Assignment/CronusGL_Assignment.vcxproj
+++ b/CronusGL_Assignment/CronusGL_Assignment.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MeshLoaderOBJ.cpp" />
     <ClCompile Include="src\SceneNode.cpp" />
+    <ClCompile Include="src\SceneNode_Static.cpp" />
     <ClCompile Include="src\SceneObject.cpp" />
     <ClCompile Include="src\ShaderLoader.cpp" />
     <ClCompile Include="src\StaticObject.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="src\LoadTexture2DBMP.h" />
     <ClInclude Include="src\MeshLoaderOBJ.h" />
     <ClInclude Include="src\SceneNode.h" />
+    <ClInclude Include="src\SceneNode_Static.h" />
     <ClInclude Include="src\SceneObject.h" />
     <ClInclude Include="src\ShaderLoader.h" />
     <ClInclude Include="src\StaticObject.h" />
