--- a/CronusGL_Assignment/CronusGL_Assignment.vcxproj.filters
+++ b/CronusGL_Assignment/CronusGL_Assignment.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\SceneNode_Static.cpp">
       <Filter>Source Files\Scene graph</Filter>
     </ClCompile>
+    <ClCompile Include="src\SceneNode_Dynamic.cpp">
+      <Filter>Source Files\Scene graph</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files\Scene Graph</Filter>
     </ClInclude>
     <ClInclude Include="src\SceneNode_Static.h">
+      <Filter>Header Files\Scene Graph</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SceneNode_Dynamic.h">
       <Filter>Header Files\Scene Graph</Filter>
     </ClInclude>
   </ItemGroup>
