--- a/CronusGL_Assignment/CronusGL_Assignment.vcxproj
+++ b/CronusGL_Assignment/CronusGL_Assignment.vcxproj
@@ -133,34 +133,32 @@
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\DynamicObject.cpp" />
+    <ClCompile Include="src\Camera_Tank.cpp" />
     <ClCompile Include="src\GLUTCallbacks.cpp" />
     <ClCompile Include="src\LinkedList.cpp" />
     <ClCompile Include="src\LoadTexture2DBMP.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MeshLoaderOBJ.cpp" />
+    <ClCompile Include="src\Scene.cpp" />
     <ClCompile Include="src\SceneNode.cpp" />
     <ClCompile Include="src\SceneNode_Dynamic.cpp" />
     <ClCompile Include="src\SceneNode_Static.cpp" />
-    <ClCompile Include="src\SceneObject.cpp" />
     <ClCompile Include="src\ShaderLoader.cpp" />
-    <ClCompile Include="src\StaticObject.cpp" />
     <ClCompile Include="src\Tank.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Application.h" />
-    <ClInclude Include="src\DynamicObject.h" />
+    <ClInclude Include="src\Camera_Tank.h" />
     <ClInclude Include="src\GLUTCallbacks.h" />
     <ClInclude Include="src\LinkedList.h" />
     <ClInclude Include="src\LoadTexture2DBMP.h" />
     <ClInclude Include="src\MeshLoaderOBJ.h" />
+    <ClInclude Include="src\Scene.h" />
     <ClInclude Include="src\SceneNode.h" />
     <ClInclude Include="src\SceneNode_Dynamic.h" />
     <ClInclude Include="src\SceneNode_Static.h" />
-    <ClInclude Include="src\SceneObject.h" />
     <ClInclude Include="src\ShaderLoader.h" />
-    <ClInclude Include="src\StaticObject.h" />
     <ClInclude Include="src\Structures.h" />
     <ClInclude Include="src\Tank.h" />
   </ItemGroup>
